# CPPA_2024-2025_G8Projects

./: CMakeLists.txt  README.md
include/: blocNote.h  game.h  global.h  inventory.h
src/GUI/: GUI_blocNote.c  GUI_game.c  GUI_inventory.c
src/console/: blocNote.c  game.c  inventory.c
styles/: blocNote.css  game.css  inventory.css
tests/: blocNote.c  game.c  inventory.c
util/: blocNote.c  game.c  global.c  inventory.c
